--- a/app/src/main/res/layout/wrapped_text_view.xml
+++ b/app/src/main/res/layout/wrapped_text_view.xml
@@ -4,6 +4,9 @@
     style="@style/TextAppearance.MaterialComponents.Subtitle1"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@null"
+    android:gravity="top"
+    android:minHeight="300dp"
     android:paddingLeft="16dp"
     android:paddingRight="16dp"
     android:text="@string/desc_accessibility"
