--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -172,7 +172,7 @@
     </style>
 
     <!--防止白色启动背景-->
-    <style name="TransparentBackground" parent="Theme.AppCompat.Light.NoActionBar">
+    <style name="TransparentBackground" parent="AppTheme">
         <item name="android:windowBackground">@color/transparent</item>
         <item name="android:windowContentOverlay">@null</item>
         <item name="android:windowIsTranslucent">true</item>
