--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -58,6 +58,7 @@
 
     <style name="BottomDialog.Dark" parent="BottomDialog">
         <item name="bd_bg_color">@color/app_dark_background</item>
+        <item name="bd_nav_color">@color/app_dark_background</item>
         <item name="android:textColorPrimary">#fff</item>
     </style>
 
