--- a/app/src/main/res/layout/fragment_base_list.xml
+++ b/app/src/main/res/layout/fragment_base_list.xml
@@ -49,7 +49,7 @@
                     android:gravity="center"
                     android:orientation="vertical" />
 
-                <cn.vove7.jarvis.view.RecyclerViewWithContextMenu
+                <cn.vove7.jarvis.view.SpringRecyclerView
                     android:id="@+id/recycle_view"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
@@ -65,6 +65,7 @@
                 <!--app:hideScrollbar="false"-->
                 <com.pluscubed.recyclerfastscroll.RecyclerFastScroller
                     android:id="@+id/fast_scroller"
+                    app:rfs_handleNormalColor="?attr/colorAccent"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
 
