--- a/app/src/main/res/layout/activity_expandable_settings.xml
+++ b/app/src/main/res/layout/activity_expandable_settings.xml
@@ -1,49 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<cn.vove7.jarvis.view.SpringExpandableListView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/expand_list"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:clipToPadding="false"
+    android:divider="#00000000"
+    android:groupIndicator="@null"
+    android:overScrollMode="never"
+    android:padding="10dp"
+    android:scrollbars="none"
+    tools:listitem="@layout/item_of_settings_group">
 
-    <!--    <LinearLayout-->
-    <!--        android:id="@+id/unlock_advan_fun"-->
-    <!--        android:layout_width="match_parent"-->
-    <!--        android:layout_height="50dp"-->
-    <!--        android:background="@color/app_foreground"-->
-    <!--        android:elevation="3dp"-->
-    <!--        android:gravity="center_vertical"-->
-    <!--        android:paddingStart="10dp"-->
-    <!--        android:paddingEnd="10dp"-->
-    <!--        android:visibility="visible">-->
-
-    <!--        <TextView-->
-    <!--            android:layout_width="0dp"-->
-    <!--            android:layout_height="wrap_content"-->
-    <!--            android:layout_weight="1"-->
-    <!--            android:text="@string/text_need_unlock"-->
-    <!--            android:textSize="15sp" />-->
-
-    <!--        <Button-->
-    <!--            android:id="@+id/btn_unlock"-->
-    <!--            android:layout_width="wrap_content"-->
-    <!--            android:layout_height="40dp"-->
-    <!--            android:text="@string/text_unlock"-->
-    <!--            android:textColor="#fff"-->
-    <!--            android:textStyle="bold"-->
-    <!--            android:theme="@style/MaterialButton.Blue" />-->
-    <!--    </LinearLayout>-->
-
-    <cn.vove7.jarvis.view.SpringExpandableListView
-        android:id="@+id/expand_list"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:clipToPadding="false"
-        android:divider="#00000000"
-        android:groupIndicator="@null"
-        android:overScrollMode="always"
-        android:padding="10dp"
-        android:scrollbars="none"
-        tools:listitem="@layout/item_of_settings_group">
-
-    </cn.vove7.jarvis.view.SpringExpandableListView>
-</LinearLayout>
+</cn.vove7.jarvis.view.SpringExpandableListView>
