--- a/app/src/main/res/layout/fragment_base_list.xml
+++ b/app/src/main/res/layout/fragment_base_list.xml
@@ -54,6 +54,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:animationCache="false"
+                    android:overScrollMode="never"
                     android:scrollingCache="false"
                     android:smoothScrollbar="true"
                     app:layout_behavior="@string/appbar_scrolling_view_behavior" />
@@ -65,9 +66,9 @@
                 <!--app:hideScrollbar="false"-->
                 <com.pluscubed.recyclerfastscroll.RecyclerFastScroller
                     android:id="@+id/fast_scroller"
-                    app:rfs_handleNormalColor="?attr/colorAccent"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+                    android:layout_height="wrap_content"
+                    app:rfs_handleNormalColor="?attr/colorAccent">
 
                 </com.pluscubed.recyclerfastscroll.RecyclerFastScroller>
             </RelativeLayout>
