请求使用retrofit重构网络请求

--- a/app/src/main/res/layout/dialog_sign_up.xml
+++ b/app/src/main/res/layout/dialog_sign_up.xml
@@ -22,7 +22,7 @@
         android:layout_height="wrap_content"
         app:helperText="请注意邮箱务必正确，确保找回密码时正常接收邮件">
 
-        <EditText
+        <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:digits="0123456789qwertyuiopasdfghjklzxcvbnmQWERTYUIOPASDFGHJKLZXCVBNM@._"
@@ -36,7 +36,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <EditText
+        <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/text_password"
@@ -49,7 +49,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <EditText
+        <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/text_confirm_pswd"
@@ -71,7 +71,7 @@
             android:layout_weight="1"
             app:helperText="@string/text_mail_help">
 
-            <EditText
+            <com.google.android.material.textfield.TextInputEditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/text_ver_code" />
