--- a/app/src/main/res/layout/item_of_settings_checkbox.xml
+++ b/app/src/main/res/layout/item_of_settings_checkbox.xml
@@ -4,14 +4,14 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="?attr/app_foreground"
-    android:gravity="center_vertical"
     android:orientation="horizontal">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="?attr/selectableItemBackground"
-        android:baselineAligned="false">
+        android:baselineAligned="false"
+        android:gravity="center_vertical">
 
         <LinearLayout
             android:id="@+id/tile_area"
@@ -44,6 +44,13 @@
                 android:textSize="12sp" />
         </LinearLayout>
 
+        <View
+            android:id="@+id/compound_split_view"
+            android:layout_width="1dp"
+            android:layout_height="25dp"
+            android:alpha="0.5"
+            android:background="?attr/secondary_text_color" />
+
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
@@ -52,7 +59,7 @@
             android:paddingStart="10dp"
             android:paddingEnd="10dp">
 
-            <CheckBox
+            <com.google.android.material.checkbox.MaterialCheckBox
                 android:id="@+id/wight_checkbox"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
