--- a/app/src/main/res/layout/item_of_settings_switch.xml
+++ b/app/src/main/res/layout/item_of_settings_switch.xml
@@ -4,13 +4,13 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="?attr/app_foreground"
-    android:gravity="center_vertical"
     android:orientation="horizontal">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="?attr/selectableItemBackground"
+        android:gravity="center_vertical"
         android:baselineAligned="false">
 
         <LinearLayout
@@ -44,14 +44,21 @@
                 android:textSize="12sp" />
         </LinearLayout>
 
+        <View
+            android:id="@+id/compound_split_view"
+            android:layout_width="1dp"
+            android:layout_height="25dp"
+            android:alpha="0.5"
+            android:background="?attr/secondary_text_color" />
+
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:gravity="center_vertical|end"
-            android:paddingStart="10dp"
+            android:paddingStart="20dp"
             android:paddingEnd="10dp">
 
-            <Switch
+            <com.google.android.material.switchmaterial.SwitchMaterial
                 android:id="@+id/wight_switch"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
