支持定时任务

--- a/app/src/main/res/layout/activity_real_main.xml
+++ b/app/src/main/res/layout/activity_real_main.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <fragment xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/fg"
+    android:id="@+id/fragment_mine"
     android:name="cn.vove7.jarvis.fragments.MineFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
+    android:tag="mine"
     tools:context="cn.vove7.jarvis.activities.MainActivity" />
