--- a/app/src/main/res/layout/list_header_with_switch.xml
+++ b/app/src/main/res/layout/list_header_with_switch.xml
@@ -16,7 +16,7 @@
         android:text="@string/bottom_sheet_behavior"
         android:textSize="16sp" />
 
-    <Switch
+    <com.google.android.material.switchmaterial.SwitchMaterial
         android:id="@+id/header_switch"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
