--- a/app/src/main/res/layout/fragment_base_list.xml
+++ b/app/src/main/res/layout/fragment_base_list.xml
@@ -49,7 +49,7 @@
                     android:gravity="center"
                     android:orientation="vertical" />
 
-                <cn.vove7.jarvis.view.SpringRecyclerView
+                <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/recycle_view"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
