--- a/app/src/main/res/layout/activity_abc_header.xml
+++ b/app/src/main/res/layout/activity_abc_header.xml
@@ -2,7 +2,8 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <LinearLayout
         android:id="@+id/root"
@@ -29,7 +30,7 @@
             app:cardCornerRadius="5dp"
             app:cardElevation="2dp">
 
-            <cn.vove7.jarvis.view.SpringWrapContentListView xmlns:tools="http://schemas.android.com/tools"
+            <cn.vove7.vtp.view.listview.WrapContentListView
                 android:id="@+id/list_view"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
