--- a/app/src/main/res/drawable/bg_screen_text_high_light_no_radius.xml
+++ b/app/src/main/res/drawable/bg_screen_text_high_light_no_radius.xml
@@ -3,24 +3,39 @@
     <!--标记文字-->
     <item android:state_selected="false" android:state_pressed="false">
         <shape>
-            <stroke android:width="1.5dp" android:color="@color/green_700" />
+            <corners android:radius="1dp" />
+            <solid android:color="#10000000" />
+            <stroke
+                android:width="0.01dp"
+                android:color="#000" />
         </shape>
     </item>
     <item android:state_selected="false" android:state_pressed="true">
         <shape>
-            <solid android:color="#80388E3C" />
+            <corners android:radius="1dp" />
+            <solid android:color="#600085f4" />
+            <stroke
+                android:width="0.01dp"
+                android:color="#000" />
         </shape>
     </item>
     <!--翻译过-->
     <item android:state_selected="true" android:state_pressed="false">
-        <shape android:layout_width="wrap_content">
-            <solid android:color="#80388E3C" />
-            <!--<solid android:color="#A631EB38" />-->
+        <shape>
+            <corners android:radius="1dp" />
+            <solid android:color="#600085f4" />
+            <stroke
+                android:width="0.01dp"
+                android:color="#000" />
         </shape>
     </item>
     <item android:state_selected="true" android:state_pressed="true">
         <shape>
-            <solid android:color="#80388E3C" />
+            <corners android:radius="1dp" />
+            <solid android:color="#600085f4" />
+            <stroke
+                android:width="0.01dp"
+                android:color="#000" />
         </shape>
     </item>
 </selector>
