--- a/app/src/main/res/layout/content_image.xml
+++ b/app/src/main/res/layout/content_image.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
+    android:orientation="vertical"
     android:layout_height="300dp"
     android:gravity="center">
 
@@ -13,4 +14,11 @@
         android:src="@drawable/listening_ripple_26">
 
     </ImageView>
+
+    <TextView
+        android:id="@+id/text_view"
+        android:layout_marginTop="10dp"
+        android:textColor="?attr/primary_text_color"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
 </LinearLayout>
