--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -115,6 +115,15 @@
         <item name="android:windowExitAnimation">@anim/fade_out_bottom</item>
         <item name="bd_bg_color">@color/app_foreground</item>
         <item name="bd_bar_radius">20dp</item>
+
+<!--        <item name="windowNoTitle">true</item>-->
+<!--        <item name="windowActionBar">false</item>-->
+<!--        <item name="colorPrimary">@android:color/black</item>-->
+<!--        <item name="colorPrimaryDark">@android:color/black</item>-->
+<!--        <item name="android:windowTranslucentStatus">true</item>-->
+<!--        <item name="android:windowTranslucentNavigation">true</item>-->
+<!--        <item name="android:statusBarColor">@color/zxl_capture_status_bar_color</item>-->
+        <item name="android:navigationBarColor">#fff</item>
     </style>
 
     <style name="TextOcr.Dark" parent="TextOcr">
