--- a/common/src/main/res/values/keys.xml
+++ b/common/src/main/res/values/keys.xml
@@ -82,6 +82,7 @@
     <string name="key_speech_recog_type" translatable="false">speech_recog_type</string>
     <string name="key_speech_syn_type" translatable="false">speech_syn_type</string>
     <string name="key_open_app_compat" translatable="false">open_app_compat</string>
+    <string name="key_gesture_adb_first" translatable="false">gesture_adb_first</string>
     <string name="key_xunfei_speech_key" translatable="false">xunfei_speech_key</string>
     <string name="key_recog_wait_duration" translatable="false">recog_wait_duration</string>
 
